add some content to section 1 (lectures 1 and 2)

--- a/main.tex
+++ b/main.tex
@@ -3,13 +3,57 @@
 \usepackage{amssymb}
 \title{Probability and Statistics: A Deep Refresher}
 
+\newtheorem{exc}{Exercise}
+\newtheorem{prb}{Problem}
+
 \begin{document}
 \maketitle
 \tableofcontents
 \part{Probability Theory}
-\section{How to interpret a Probability}
-This covers sections 1-4 of the scribe. Actually I cannot find all sections' names right now. So after we proceed, we'll decide about the distribution of content and their namings.
+\section{}
 
+\subsection{Warm-up}
+\begin{exc}
+  How many different (and possible) combinations does a $3\times 3$ Rubik's cube have?
+\end{exc}
+\begin{exc}
+  What is the probability of having a mono-colored face?
+\end{exc}
+
+What do you suggest for Rubik's cube's entropy? How much distance does it have from a solved cube?
+Such an example would be 
+\[ \sum (\mbox{\# of pairs of different colors on each face}). \]
+
+Let's shuffle the cube randomly many times, and on each experiment, we count this entropy. As you see, this number is always (magically) near 60. Why?
+
+\subsection{Some ancient problems}
+\begin{prb} (Galileo)
+  In tossing a die 3 times, is sum of 10 more probable or 9?
+\end{prb}
+
+\begin{prb}
+  (Pascal's letter to Fermat) Consider these two gamblings: (1) We throw a die 4 times and bet on coming a 6. (2) We throw two dice 24 times and bet on a 6-6.
+
+  Which gambling do you participate?
+\end{prb}
+
+\begin{prb}
+  (Let's divide the prize) A chess game between players $A$ and $B$ is going on and the one who wins 5 times is going to be the winner. Because of some reasons, the game is halted in the state that $A$ has won 3 times and $B$ has won 2 times. What is the most fair way of dividing the first prize between $A$ and $B$?
+\end{prb}
+
+\begin{prb}
+  The same problem, but put ``throwing a fair coin'' instead of playing chess. What will change?
+\end{prb}
+
+\begin{prb}
+  (Laplace) If one has an unfair coin, what is the probability of heads in a throw?
+\end{prb}
+
+\subsection{Uniform distribution and Frequentist approach to probability}
+blah blah blah
+
+\subsection{De Finetti's view to probability}
+blah blah blah
 
 \part{Statistics}
 \end{document}
